[gd_scene load_steps=10 format=2]

[ext_resource path="res://freeway_assets/pista.png" type="Texture" id=1]
[ext_resource path="res://Jogador2.tscn" type="PackedScene" id=2]
[ext_resource path="res://chegada.tscn" type="PackedScene" id=3]
[ext_resource path="res://Jogador1.tscn" type="PackedScene" id=4]
[ext_resource path="res://Principal.gd" type="Script" id=5]
[ext_resource path="res://freeway_assets/sons/ganhar.wav" type="AudioStream" id=6]
[ext_resource path="res://freeway_assets/sons/som_pontuar.wav" type="AudioStream" id=7]
[ext_resource path="res://freeway_assets/PressStart2P-Regular.ttf" type="DynamicFontData" id=8]

[sub_resource type="DynamicFont" id=1]
size = 30
font_data = ExtResource( 8 )

[node name="Principal" type="Node"]
script = ExtResource( 5 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -2.51984 )
texture = ExtResource( 1 )
centered = false

[node name="chegada" parent="." instance=ExtResource( 3 )]
position = Vector2( 638.66, 64 )

[node name="Jogador1" parent="." instance=ExtResource( 4 )]
position = Vector2( 420, 696 )

[node name="Jogador2" parent="." instance=ExtResource( 2 )]
position = Vector2( 844, 696 )

[node name="tempo_carro" type="Timer" parent="."]
wait_time = 0.3
autostart = true

[node name="pontos1" type="Label" parent="."]
margin_left = 400.0
margin_top = 10.0
margin_right = 420.0
margin_bottom = 30.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="pontos2" type="Label" parent="."]
margin_left = 820.0
margin_top = 10.0
margin_right = 844.0
margin_bottom = 30.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="final" type="Label" parent="."]
margin_top = 10.0
margin_right = 1280.0
margin_bottom = 30.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.768627, 0.823529, 0.172549, 1 )
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ganhar" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )

[node name="pontuar" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 7 )

[node name="botao" type="Button" parent="."]
margin_left = 496.0
margin_top = 320.0
margin_right = 796.0
margin_bottom = 400.0
custom_fonts/font = SubResource( 1 )
text = "Reiniciar"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pontuar" from="Jogador1" to="." method="_on_Jogador1_pontuar"]
[connection signal="outro_pontuar" from="Jogador2" to="." method="_on_Jogador2_outro_pontuar"]
[connection signal="timeout" from="tempo_carro" to="." method="_on_tempo_carro_timeout"]
[connection signal="pressed" from="botao" to="." method="_on_botao_pressed"]
